--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.0
   flutter_svg: ^2.2.0
+  curved_navigation_bar: ^1.0.6
+  animated_bottom_navigation_bar: ^1.3.3
+  flutter_animate: ^4.5.0
+  shimmer: ^3.0.0
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
