--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:required="false" />
     
     <application
-        android:label="home_haven"
+        android:label="HomeHaven"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
